// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<GifGrid /> should return a snapshot 1`] = `
<Fragment>
  <h3
    className="animate__zoomInLeft"
  >
    homero
  </h3>
  <p>
    Cargando ...
  </p>
  <div
    className="card-grid"
  />
</Fragment>
`;

exports[`<GifGrid /> should show items when the images load 1`] = `
<Fragment>
  <h3
    className="animate__zoomInLeft"
  >
    homero
  </h3>
  <div
    className="card-grid"
  >
    <GifGridItem
      id="ABC"
      key="ABC"
      title="cualquier cosa"
      url="www.google.com"
    />
    <GifGridItem
      id="123"
      key="123"
      title="cualquier cosa 2"
      url="www.yahoo.com"
    />
  </div>
</Fragment>
`;
